# grow-lab

./: .env.example  .gitignore  CHANGELOG.md  README.md  art-demo.html  config.demo.toml  config.example.toml  demo.html  pyproject.toml
config/calibration/: example_profile.json
data/examples/: as7341_calibration_example.csv  as7341_validation_report_example.md
deploy/: push-dashboard.sh  recover-dashboard.sh
deploy/cloudflared/: config.yml  setup.sh
deploy/systemd/: cloudflared.service  growlab-dashboard.service  growlab.service
docs/: AS7341_CALIBRATION_PROTOCOL.md  BOM.md  DATA_ARCHITECTURE.md  IRRIGATION_SYSTEM.md  LIGHTING_SYSTEM.md  PHASE1_RASPBERRY_PI_WALKTHROUGH.md  SENSOR_STACK.md  SYSTEM_ARCHITECTURE.md  SYSTEM_CHARTER.md  UI_UX_DESIGN_REFERENCE.md  V0_BENCH_PROTOTYPE.md  V1_GO_LIVE_RUNBOOK.md  WIRING_&_BUSES.md
firmware/esp32/: platformio.ini
pi/: main.py
pi/calibration/: __init__.py  as7341_features.py  capture_session.py  fit_model.py  models.py  profile_io.py  runtime_estimator.py  validate_model.py
pi/cli/: calibration_cmd.py  camera_control.py  dashboard_cmd.py  db_tools.py  display_cmd.py  light_control.py  main.py  pump_control.py  sensor_test.py
pi/config/: __init__.py  loader.py  schema.py
pi/dashboard/: SECURITY.md  app.py  connections.py  security.py
pi/data/: __init__.py  export.py  migrations.py  models.py  repository.py
pi/discovery/: registry.py  scanner.py
pi/drivers/: _gpio.py  as7341.py  base.py  bme280.py  camera.py  ds18b20.py  esp32_serial.py  (+9 more)
templates/: calibration_session_template.csv
tests/: conftest.py
(+89 files in other folders)
